Closed Bug 1681729 Opened 5 years ago Closed 5 years ago

Pass the right value for aCloneChildren to AddChildSHEntryHelper with SHIP

Categories

(Core :: DOM: Navigation, defect, P2)

defect

Tracking

()

RESOLVED FIXED
86 Branch
Fission Milestone M6c
Tracking Status
firefox86 --- fixed

People

(Reporter: peterv, Assigned: peterv)

References

Details

Attachments

(1 file)

This is the cause of some of the assertions we see in bug 1672964 in the dom/html/test/test_iframe_sandbox_* tests.

Severity: -- → S3
Fission Milestone: --- → M6c
Priority: -- → P2
Pushed by pvanderbeken@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/feab619ecaa6 Pass the right value for aCloneChildren to AddChildSHEntryHelper with SHIP. r=smaug
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 86 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: