Bug 1681729 - Pass the right value for aCloneChildren to AddChildSHEntryHelper with SHIP. r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D99481